Resolve bug: Overflow issue in mobile browsers

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -73,6 +73,11 @@ body {
   min-height: 100vh; }
 
 .container {
+  /* Prevent overflow in mobile browsers */
+  overflow-x: hidden;
+  position: relative;
+  width: 100%;
+  /***************************************/
   max-width: 120rem;
   margin: 8rem auto;
   background-color: var(--color-grey-light-1);
