--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,4 +1,10 @@
 .container {
+    /* Prevent overflow in mobile browsers */
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
+    /***************************************/
+
     max-width: 120rem;
     margin: 8rem auto;
     background-color: var(--color-grey-light-1);
